@@ -8,7 +8,6 @@ description:
     Develop and run BDD specs written in Lua for RSpec style workflow.
 
 dependencies:
-- ansicolors
 - luamacro >= 2.0
 - lua >= 5.1
 - lyaml >= 4
